--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
 
+
+CÓDIGOS CSS:
+.titulo {color: pink
+.paragrafo {
+    background-color: #424E61;
+    color: white;
+    padding: 24px 0;
+    margin: 0 16px;
+    font-size: 16px;
